--- a/THANKS
+++ b/THANKS
@@ -108,6 +108,7 @@
   Marc Espie			espie@nerim.net
   Marc J. Fraioli		fraioli@dg-rtp.dg.com
   Mark Kettenis			kettenis@phys.uva.nl
+  Michael Haubenwallner		michael.haubenwallner@salomon.at
   Mike Frysinger		vapier@gentoo.org
   Nix				nix@esperi.org.uk
   Olly Betts			olly@muscat.co.uk
