--- a/THANKS
+++ b/THANKS
@@ -119,6 +119,7 @@
   Rainer Orth			ro@TechFak.Uni-Bielefeld.DE
   Rainer Tammer			tammer@tammer.net
   Ralf Menzel			menzel@ls6.cs.uni-dortmund.de
+  Richard Purdie		rpurdie@rpsys.net
   Robert Ögren			lists@roboros.com
   Roberto Bagnara		bagnara@cs.unipr.it
   Roland Mainz			roland.mainz@nrubsig.org
