--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-04-23  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* tests/static.at (ccache -all-static): Ignore link warnings.
+	Report by Gary V. Vaughan.
+
 2008-04-22  Gary V. Vaughan  <gary@gnu.org>
 
 	Libtoolize now advises AC_CONFIG_MACRO_DIR use where appropriate.
