--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-04-23  Gary V. Vaughan  <gary@gnu.org>
+
+	* libtoolize.m4sh (rerun_aclocal): Remove unused variable.
+	Reported by Olly Betts <olly@survex.com>
+
 2008-04-23  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* tests/static.at (ccache -all-static): Ignore link warnings.
