--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2008-04-23  Michael Haubenwallner  <michael.haubenwallner@salomon.at>
+
+	Use /nonexistent as destination for files not to be installed.
+	* tests/darwin.at (darwin fat compile): Fix typo.
+	* tests/inherited_flags.at (inherited_linker_flags): Change
+	-rpath to /nonexistent.  This helps to avoid accidentally
+	picking up libraries below /usr/local.
+	* tests/template.at (simple template test): Likewise.  Fixes
+	test failure for additional incompatible libstdc++ in
+	/usr/local.
+	* tests/testsuite.at (configure_options): Add
+	--prefix=/nonexistent.
+
 2008-04-23  Gary V. Vaughan  <gary@gnu.org>
 
 	* libtoolize.m4sh (rerun_aclocal): Remove unused variable.
@@ -29,7 +42,7 @@
 	* THANKS: Update.
 	Report by Richard Purdie.
 
-2008-04-22  Andreas Schwab <schwab@suse.de>
+2008-04-22  Andreas Schwab  <schwab@suse.de>
 	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	Fix default argument for AC_LIBLTDL_CONVENIENCE.
