--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-04-24  Eric Blake  <ebb9@byu.net>
+
+	Fix bug in 2008-04-21 type improvements.
+	* libltdl/ltdl.c (load_deplibs): Fix casting bug.
+
 2008-04-23  Michael Haubenwallner  <michael.haubenwallner@salomon.at>
 
 	Use /nonexistent as destination for files not to be installed.
