--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-05-01  Peter O'Gorman  <peter@pogma.com>
+
+	Use AC_CHECK_TOOL for otool and otool64.
+	* libltdl/m4/libtool.m4 (_LT_REQUIRED_DARWIN_CHECKS): Check.
+	* libltdl/config/ltmain.m4sh (func_mode_link): Use.
+	Reported by Richard Purdie <rpurdie@rpsys.net>
+
 2008-04-30  Eric Blake  <ebb9@byu.net>
 
 	Support cygwin 1.7.0 in loadlibrary loader.
