--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 NEWS - list of user-visible changes between releases of GNU Libtool
 
-New in 2.2.4: 2008-??-??: CVS version 2.2.3a, Libtool team:
+New in 2.2.4: 2008-05-04: CVS version 2.2.3a, Libtool team:
 
 * New features:
 
