--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2008-05-25  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	Fix ifort settings again.
+	* libltdl/m4/libtool.m4 (_LT_COMPILER_PIC) [linux] <ifort>:
+	Unlike icc and ecc, not all ifort versions understand `-KPIC',
+	e.g. version 10.1, so use `-fPIC' instead.
+	Report by Jeff Squyres.
+
 2008-05-20  Eric Blake  <ebb9@byu.net>
 
 	Resynchronize argz whitespace changes from gnulib.
